--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "Sobreira\\Gcm\\": "gcm/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-master",
     "require": {
         "illuminate/support": "~5"
     }
